Added several toasts

--- a/src/language/en.json
+++ b/src/language/en.json
@@ -1,13 +1,18 @@
 {
+  "Welcome": "Welcome",
+  "to": "to",
   "Quantity of vacation days:": "Quantity of vacation days:",
   "Remaining vacation days:": "Remaining vacation days:",
-  "Limit reached": "You have reached your maximum number of vacation days!",
+  "Limit reached": "Maximum number of vacation days reached!",
   "Login in progress!": "Login in progress!",
   "Reset days": "Reset days",
-  "Welcome to": "Welcome to",
   "Sign in with": "Sign in with",
   "Cancel": "Cancel",
   "Reset": "Reset",
   "Attention!": "Attention!",
-  "Do you really want to drop all the chosen days?": "Do you really want to drop all the chosen days?"
+  "Do you really want to drop all the chosen days?": "Do you really want to drop all the chosen days?",
+  "User data is successfully saved": "Data saved successfully!",
+  "Error saving user data": "Error saving user data!",
+  "All selected days have been reset": "All selected days have been reset!",
+  "Login error": "Login error!"
 }
