--- a/src/language/pl.json
+++ b/src/language/pl.json
@@ -1,13 +1,18 @@
 {
+  "Welcome": "Witamy",
+  "to": "w",
   "Quantity of vacation days:": "Ilość dni urlopu:",
   "Remaining vacation days:": "Pozostałe dni urlopu:",
-  "Limit reached": "Osiągnąłeś maksymalną liczbę dni urlopu!",
+  "Limit reached": "Osiągnięto maksymalną liczbę dni urlopu!",
   "Login in progress!": "Trwa logowanie!",
   "Reset days": "Zresetuj dni",
-  "Welcome to": "Witamy w",
   "Sign in with": "Zaloguj się za pomocą",
   "Cancel": "Anuluj",
   "Reset": "Resetuj",
   "Attention!": "Uwaga!",
-  "Do you really want to drop all the chosen days?": "Czy naprawdę chcesz usunąć wszystkie wybrane dni?"
+  "Do you really want to drop all the chosen days?": "Czy naprawdę chcesz usunąć wszystkie wybrane dni?",
+  "User data is successfully saved": "Dane zostały pomyślnie zapisane!",
+  "Error saving user data": "Błąd podczas zapisywania danych użytkownika!",
+  "All selected days have been reset": "Wszystkie wybrane dni zostały zresetowane!",
+  "Login error": "Błąd logowania!"
 }
